cmake_minimum_required(VERSION 3.17)
project(Krepsinis)

set(CMAKE_CXX_STANDARD 14)

add_executable(Krepsinis main.cpp ASMUO.cpp ASMUO.h Agentas.cpp Agentas.h Asistentas.cpp Asistentas.h EuroChamp.cpp EuroChamp.h LKL.cpp LKL.h Rungtynes.cpp Rungtynes.h Treneris.cpp Treneris.h Vadybininkas.cpp Vadybininkas.h Zaidejas.cpp Zaidejas.h RungtyniuTvarkarastis.cpp RungtyniuTvarkarastis.h Draudimas.cpp Draudimas.h Polisas.cpp Polisas.h Apranga.cpp Apranga.h Komanda.cpp Komanda.h Kandidatas.cpp Kandidatas.h Rinktine.cpp Rinktine.h Vadovas.cpp Vadovas.h)